--- a/src/views/home/KnowTheCharacters.scss
+++ b/src/views/home/KnowTheCharacters.scss
@@ -98,7 +98,7 @@
 
   button {
     border-radius: 50%;
-    background-color: colors.$gray-800;
+    background-color: colors.$gray-700;
     color: colors.$white;
     border: none;
 
