--- a/src/views/home/PremiumNfts.scss
+++ b/src/views/home/PremiumNfts.scss
@@ -36,3 +36,11 @@
     }
   }
 }
+
+.dark .premium.nfts {
+  .slider.container {
+    button {
+      background-color: colors.$gray-700 !important;
+    }
+  }
+}
